force-app/main/default/objects/FieloPLT__CriterionGroup__c/FieloPLT__CriterionGroup__c.object-meta.xml
<CustomObject>
    <description>It groups all criteria in Rules, Missions, Segments and Levels by evaluating information from related lists as a whole unit.</description>
    <label>Criterion Group</label>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Criterion Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>