force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Field__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Field__c</fullName>
    <description>Field API name of the object being processed.</description>
    <inlineHelpText>Enter the field API name of the object being processed.</inlineHelpText>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>