force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Level__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion Group to a particular Level.</description>
    <inlineHelpText>Choose a Criterion Group for the Level.</inlineHelpText>
    <label>Level</label>
    <referenceTo>FieloPLT__Level__c</referenceTo>
    <relationshipLabel>Criteria Group</relationshipLabel>
    <relationshipName>Criteria_Group</relationshipName>
    <type>Lookup</type>
</CustomField>