force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LogicalExpression__c</fullName>
    <description>Logical expression that defines how multiple criteria will be evaluated</description>
    <inlineHelpText>Choose how criteria can be met: All to require each and every Criterion to be true, Any to require just one Criterion to be true and Custom to enter a more complex logical expression using Criterion numbers - e.g. ((1 AND 2) OR 3)</inlineHelpText>
    <label>Match Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>