force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Mission__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion Group to a particular Mission.</description>
    <inlineHelpText>Choose a Criterion Group for the Mission.</inlineHelpText>
    <label>Mission</label>
    <referenceTo>FieloPLT__Mission__c</referenceTo>
    <relationshipLabel>Criteria Group</relationshipLabel>
    <relationshipName>Criteria_Group</relationshipName>
    <type>Lookup</type>
</CustomField>