force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Mode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Mode__c</fullName>
    <description>It specifies the Criterion Group type (e.g. count, summary, etc.).</description>
    <inlineHelpText>Choose the Criterion Group type (e.g. count, summary, etc.).</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>