force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Order__c</fullName>
    <description>Criterion Group order based on its related Mission, Rule, Segment or Level.</description>
    <inlineHelpText>Criterion Group order based on its related Mission, Rule, Segment or Level.</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>