force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__RelatedList__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RelatedList__c</fullName>
    <description>Name of the Related list which analyzes the Criterion Group.</description>
    <inlineHelpText>Enter the name of the Related list which analyzes the Criterion Group.</inlineHelpText>
    <label>Related List</label>
    <length>80</length>
    <type>Text</type>
</CustomField>