force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion Group to a particular Rule.</description>
    <inlineHelpText>Choose a Rule for the Criterion Group.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>FieloPLT__Rule__c</referenceTo>
    <relationshipLabel>Criteria Group</relationshipLabel>
    <relationshipName>CriteriaGroup</relationshipName>
    <type>Lookup</type>
</CustomField>