force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It relates a Criterion Group to a particular Segment.</description>
    <inlineHelpText>Choose a Segment for the Criterion Group.</inlineHelpText>
    <label>Segment</label>
    <referenceTo>FieloPLT__Segment__c</referenceTo>
    <relationshipLabel>Criteria Group</relationshipLabel>
    <relationshipName>Criteria_Group</relationshipName>
    <type>Lookup</type>
</CustomField>