force-app/main/default/objects/FieloPLT__CriterionGroup__c/fields/FieloPLT__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Value__c</fullName>
    <description>A specific Criterion Value number which can be entered, set or choosen.</description>
    <inlineHelpText>Enter, set or choose a Value for the Criterion Group.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>